# Sparse-Einsum

./: .gitignore  README.md  requirements.txt  setup.cfg
BMM/: bmm_dense_einsum.py  bmm_sparse_einsum_trials.py
Documentation/: paper.tex
Documentation/chapters/: Test_Chapter.tex
SQL/: sql_engines_benchmark.py  sql_sparse_einsum.py
Utilities/: utilities.py
docs/: literature.bib  paper.tex
docs/chapters/: abstract.tex  algorithms.tex  background.tex  background_chapter.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  introduction_chapter.tex  related_work.tex  related_work_chapter.tex  tmp_avoid_merge.tex  zusammenfassung.tex
einsum/: experiments.py
einsum/backends/BMM/: bmm_dense_einsum.py  bmm_sparse_einsum.py  bmm_sparse_einsum_trials.py
einsum/backends/BMM/cpp_methods/: coo_methods.cpp  coo_methods.h  coo_methods_lib.pyx  setup.py
einsum/backends/SQL/: sql_engines_benchmark.py  sql_sparse_einsum.py
einsum/benchmarks/: einsum_benchmark_ti2.py  sparse_einsum_benchmarks.py
einsum/experiments/: experiments.py  hypernetwork_experiment.py  instance_experiment.py  util.py
einsum/tests/: einsum_functionality_test.py
einsum/utilities/: helper_functions.py
einsum/utilities/classes/: coo_matrix.py
