[metadata]
name = einsum
version = 1.0
author = LeonManthey
author_email = lethey2552@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = einsum